k8s/bigbang-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bigbang-service
spec:
  type: LoadBalancer
  selector:
    app: bigbang
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
