k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-service
  annotations:
    cloud.google.com/load-balancer-type: "External"
spec:
  selector:
    app: spring-app
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
