k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bigbang-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"  # GCP Load Balancer 사용
    networking.gke.io/managed-certificates: "bigbang-cert"
spec:
  rules:
    - host: 34.67.93.147.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bigbang-service
                port:
                  number: 80
